# arcone-agent

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/arcone-agent-py/: Cargo.toml
crates/arcone-agent-py/src/: lib.rs
docs/: agents.md  api-reference.md  examples.md  getting-started.md  guardrails-and-composer.md  index.md  knowledge-and-retrieval.md  multi-agent.md  operations.md  python-binding.md  sessions.md  tools.md
examples/: deepseek_live.rs  deepseek_stream_server.rs  knowledge_keyword.rs  knowledge_openai.rs  knowledge_pgvector.rs  multi_agent_basic.rs  portfolio_worker_agent.rs  postgres_session.rs  tool_registry.rs
python/arcone_agent/: __init__.py  __init__.pyi
python/benchmarks/: wrapper_overhead.py
python/examples/: basic_agent.py  rag.py  session.py  streaming.py  tool_calling.py
python/tests/: has.py  test_python_binding.py
src/: composer.rs  error.rs  guardrail.rs  knowledge_agent.rs  lib.rs  observability.rs  postgres.rs  stream.rs
src/agent/: config.rs  mod.rs  response.rs  runtime.rs  tool.rs
src/client/: config.rs  mod.rs
src/knowledge/: chunking.rs  memory.rs  mod.rs  postgres.rs  store.rs  types.rs
src/retrieval/: memory.rs  mod.rs  openai.rs  pgvector.rs  traits.rs  types.rs
src/session/: memory.rs  mod.rs  postgres.rs  store.rs  types.rs
src/team/: mod.rs
src/types/: chat.rs  message.rs  mod.rs  model.rs  request.rs  streaming.rs  tool.rs  usage.rs
tests/: deepseek_client.rs  error_observability.rs  guardrail_composer.rs  knowledge.rs  knowledge_agent.rs  multi_agent.rs  postgres_knowledge.rs  postgres_session.rs  retrieval.rs  session.rs
